@@ -2,6 +2,7 @@
 <font color=#FF8C00>&#9830;</font> Add an inGame Changelog (thx Blazeflack for helping me).
 <font color=#FF8C00>&#9830;</font> Install: Enable AB3 + 5 better safe than sorry.
 <font color=#FF8C00>&#9830;</font> Install: Change the goldformat to 'CONDENSED'.
+<font color=#FF8C00>&#9830;</font> Install: Switch Datatext position of S&L Currency + MUI System.
 <font color=#FF8C00>&#9830;</font> Remove fix for blank tooltip. Part of ElvUI now.
 
 <b><u> v2.03, 25.07.2016</b></u>
